@@ -1162,9 +1162,8 @@ if (!isset($template_cpg_die)) { //{THEMES}
 ******************************************************************************/
 // HTML template used by the cpg_die function
 $template_cpg_die = <<<EOT
-
-        <tr>
-                <td class="tableb tableb_alternate tableb tableb_alternate_alternate" align="center">
+					<div class="{CSS_CLASS}">
+						<h2>{HEADER_TXT}</h2>
                         <span class="cpg_user_message">{MESSAGE}</span>
 <!-- BEGIN file_line -->
                         <br />
@@ -1179,9 +1178,7 @@ $template_cpg_die = <<<EOT
                         </div>
 <!-- END output_buffer -->
                         <br /><br />
-                </td>
-        </tr>
-
+                    </div>
 
 EOT;
 /******************************************************************************
@@ -1196,25 +1193,16 @@ if (!isset($template_msg_box)) { //{THEMES}
 // HTML template used by the msg_box function
 $template_msg_box = <<<EOT
 
-        <tr>
-                <td class="tableb tableb_alternate tableb tableb_alternate_alternate" align="center">
-                        <span class="cpg_user_message">{MESSAGE}</span>
-                </td>
-        </tr>
+        <div class="{CLASS}">
+            <span class="cpg_user_message">{MESSAGE}</span>
 <!-- BEGIN button -->
-                <tr>
-                        <td align="center" class="tablef">
-                                <table cellpadding="0" cellspacing="0">
-                                        <tr>
-                                                <td class="admin_menu">
-                                                        <a href="{LINK}">{TEXT}</a>
-                                                </td>
-                                        </tr>
-                                </table>
-                        </td>
-                </tr>
+	        <br />&nbsp;
+	        <br />
+	        <span class="admin_menu">
+	                <a href="{LINK}">{TEXT}</a>
+	        </span>
 <!-- END button -->
-
+        </div>
 EOT;
 /******************************************************************************
 ** Section <<<$template_msg_box>>> - END
@@ -1642,7 +1630,7 @@ if (!function_exists('theme_cpg_die')) {  //{THEMES}
 ** Section <<<theme_cpg_die>>> - START
 ******************************************************************************/
 // Function for showing error messages
-function theme_cpg_die($msg_code, $msg_text, $msg_string, $msg_icon, $error_file, $error_line, $output_buffer, $ob) 
+function theme_cpg_die($msg_code, $msg_text, $msg_string, $css_class = 'cpg_message_info', $error_file, $error_line, $output_buffer, $ob) 
 {
     global $CONFIG, $lang_cpg_die, $template_cpg_die;
 
@@ -1653,21 +1641,18 @@ function theme_cpg_die($msg_code, $msg_text, $msg_string, $msg_icon, $error_file
             '{LINE_TXT}' => $lang_cpg_die['line'],
             '{LINE}' => $error_line,
             '{OUTPUT_BUFFER}' => $ob,
+            '{HEADER_TXT}' => $msg_string,
+            '{CSS_CLASS}' => $css_class,
     );
 
     if (!($CONFIG['debug_mode'] == 1 || ($CONFIG['debug_mode'] == 2 && GALLERY_ADMIN_MODE))) {
         template_extract_block($template_cpg_die, 'file_line');
     }
-    //if (!$output_buffer && !$CONFIG['debug_mode'])
     template_extract_block($template_cpg_die, 'output_buffer');
 
-    $icon_output = (function_exists('cpg_fetch_icon') ? cpg_fetch_icon($msg_icon, 2) : '');
-
     pageheader($msg_string);
-    starttable(-1, $icon_output . $msg_string);
     echo "<!-- cpg_die -->";
     echo template_eval($template_cpg_die, $params);
-    endtable();
     pagefooter();
 }
 /******************************************************************************
@@ -1708,7 +1693,7 @@ if (!function_exists('theme_msg_box')) {  //{THEMES}
 ** Section <<<theme_msg_box>>> - START
 ******************************************************************************/
 // Function for displaying a message-box-like table
-function theme_msg_box($title, $msg_text, $msg_icon = 'info', $button_text, $button_link, $width) 
+function theme_msg_box($title, $msg_text, $css_class = 'cpg_message_info', $button_text, $button_link) 
 {
     global $template_msg_box;
 
@@ -1718,13 +1703,11 @@ function theme_msg_box($title, $msg_text, $msg_icon = 'info', $button_text, $but
     $params = array(
             '{MESSAGE}' => $msg_text,
             '{LINK}' => $button_link,
-            '{TEXT}' => $button_text
+            '{TEXT}' => $button_text,
+            '{CLASS}' => $css_class
     );
-    $icon_output = (function_exists('cpg_fetch_icon') ? cpg_fetch_icon($msg_icon, 2) : '');
 
-    starttable($width, $icon_output.$title);
     echo template_eval($template_msg_box, $params);
-    endtable();
 }
 /******************************************************************************
 ** Section <<<theme_msg_box>>> - END
@@ -2355,7 +2338,7 @@ if (!function_exists('theme_display_message_block')) {  //{THEMES}
 ******************************************************************************/
 /******************************************************************************
 // Function for the theme_display_message_block
-The message block (not to be confused with the admin menu) will display message carried over from one page to the other and an RSS feed from the coppermine project page for the admin.
+The message block (not to be confused with the admin menu) will display message carried over from one page to the other.
 It's advisable not to change it unless you really know what you're doing.
 This function composes the individual sections of the block.
 ******************************************************************************/
@@ -2364,32 +2347,39 @@ function theme_display_message_block() {
 
     $superCage = Inspekt::makeSuperCage();
     $return = '';
+    $message_id = '';
+    $message_icon = '';
+    $message_style = '';
 
     if ($superCage->get->keyExists('message_id')) {
       $message_id = $superCage->get->getEscaped('message_id');
+    }
+    
+    if ($superCage->get->keyExists('message_icon')) {
+		$message_icon = $superCage->get->getAlpha('message_icon');
+    }
+    
+    if ($message_icon == 'error') {
+    	$message_style = 'cpg_message_error';
+    } elseif ($message_icon == 'warning') {
+    	$message_style = 'cpg_message_warning';
+    } elseif ($message_icon == 'validation') {
+    	$message_style = 'cpg_message_validation';
+    } elseif ($message_icon == 'success') {
+    	$message_style = 'cpg_message_success';
+    } else {
+    	$message_style = 'cpg_message_info';
     }
 
     if ($message_id != '') {
         $tempMessage = cpgFetchTempMessage($message_id);
         if ($tempMessage != '') {
             $return .= '<a name="cpgMessageBlock"></a>';
-            ob_start();
-            starttable(-1, cpg_fetch_icon('info', 2) . $lang_common['information']);
-            $return .= ob_get_contents();
-            ob_end_clean();
             $return .= <<< EOT
-            <tr>
-              <td class="tableb" align="center">
-                <div id="cpgMessage" class="cpg_user_message">
-                  {$tempMessage}
-                </div>
-              </td>
-            </tr>
+            <div id="cpgMessage" class="cpg_user_message {$message_style}">
+              {$tempMessage}
+            </div>
 EOT;
-            ob_start();
-            endtable();
-            $return .= ob_get_contents();
-            ob_end_clean();
         }
     }
     if (GALLERY_ADMIN_MODE) {
